ecmascript/parser/tests/typescript-errors/tsc/expressions/unaryOperators/negateOperator/negateOperatorInvalidOperations/input.ts.stderr
error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/negateOperator/negateOperatorInvalidOperations/input.ts:4:19
  |
4 | var NUMBER1 = var NUMBER-;  //expect error
  |                   ^^^^^^

error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/negateOperator/negateOperatorInvalidOperations/input.ts:4:25
  |
4 | var NUMBER1 = var NUMBER-;  //expect error
  |                         ^

error[1109]: Expected an expression
  --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/negateOperator/negateOperatorInvalidOperations/input.ts:12:14
   |
12 | var NUMBER =-;
   |              ^

